Functionalize the xml to html conversion (doesn't include the manual line changes)

--- a/appendix2-T-C.qmd
+++ b/appendix2-T-C.qmd
@@ -12,115 +12,23 @@ format:
 library(xml2)
 ```
 
+
 ::: {.column-page-outset}
 ::: {layout="[[6,6,6]]"}
 
 ::: {.column}
 ## Minimal
 
+```{r}
+source("convert-xml-to-html.R")
+```
+
+
 ```{r results='asis'}
-# START OF "MINIMAL" CODE
-# Read the XML content
-xml_file <- read_xml("data/T-C.xml")
 
-# Extract both <l>, <cb>, and <pb> elements
-lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
 
-# Initialize an empty list to store the processed lines
-processed_lines <- list()
-
-# Initialize line counter
-line_count <- 0
-
-# Function to process each element
-process_line <- function(line) {
-  # Handle page breaks differently
-  if (xml_name(line) == "pb") {
-    # Get folio number and format as standalone line
-    folio_num <- xml_attr(line, "n")
-    return(sprintf("<div class='folio-number'>%s</div>", folio_num))
-  }
-  
-  # Only increment line count for verse lines
-  if (xml_name(line) == "l") {
-    line_count <<- line_count + 1
-      
-    # SPECIAL CASE: Hard-code line v.541 to fix repetition nesting issue
-    if (line_count == 541) {
-      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='1'>D</span>el ureison leva Marie</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.1381 to correct spacing
-    if (line_count == 1381) {
-      return("<div style='line-height: 1.2;'>Beau Pere Rei de magestez</div>")
-    }
-    
-    # Add line number div every 5th line
-    line_number <- if (line_count %% 5 == 0) {
-      sprintf("<div class='line-number'>%d</div>", line_count)
-    } else {
-      ""
-    }
-  } else {
-    line_number <- ""
-  }
-  
-  # Process emph elements (decorative initials)
-  emph_elements <- xml_find_all(line, ".//emph")
-  for (emph in emph_elements) {
-    # Get the initial letter text
-    initial_letter <- xml_text(emph)
-    
-    # Get the size attribute (n) and style attribute (rend)
-    size_attr <- xml_attr(emph, "n")
-    style_attr <- xml_attr(emph, "rend")
-    
-    # Create the HTML for the styled initial
-    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
-                             style_attr, size_attr, initial_letter)
-    
-    # Replace the emph element with the styled HTML
-    xml_text(emph) <- styled_initial
-  }
-  
-  # Find all <choice> elements within the line
-  choices <- xml_find_all(line, ".//choice")
-  for (choice in choices) {
-    # Extract the text from the <orig> tag
-    orig_text <- xml_text(xml_find_first(choice, ".//orig"))
-    # Remove the <choice> element and replace it with the text from the <orig> tag
-    xml_set_text(choice, paste0(orig_text, " "))
-  }
-  
-  # Now we want to remove any <reg> elements entirely
-  reg_elements <- xml_find_all(line, ".//reg")
-  xml_remove(reg_elements)
-  
-  # Replace <lb/> tags with HTML line break
-  lb_elements <- xml_find_all(line, ".//lb")
-  for (lb in lb_elements) {
-    xml_set_text(lb, "")
-  }
-  
-  # Return line with number if applicable - using xml_text() instead of as.character()
-  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                line_number, xml_text(line)))
-}
-
-# Process each line and wrap with <div class='column-break'> at each <cb/>
-for (line in lines) {
-  if (xml_name(line) == "cb") {
-    # Add a closing </div> for the previous column and an opening <div> for the new column
-    processed_lines <- c(processed_lines, "</div>", "<div class='column-break'>")
-  } else {
-    # Process the line and add it to the current column
-    processed_lines <- c(processed_lines, process_line(line))
-  }
-}
-
-# Process lines and wrap in edition-text div
-formatted_text <- paste(c("<div class='edition-text'>", processed_lines, "</div>"), collapse = "\n")
-cat(formatted_text)
+# PRINT "MINIMAL" VERSION
+convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "minimal")
 
 ```
 
@@ -130,303 +38,8 @@ cat(formatted_text)
 ## Intermediate
 
 ```{r results='asis'}
-# START OF "INTERMEDIATE" CODE
-# Read the XML content
-xml_file <- read_xml("data/T-C.xml")
-
-# Extract the <l>, <cb>, and <pb> elements inside the <text> element
-lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
-
-# Initialize an empty list to store the processed lines
-processed_lines <- list()
-
-# Initialize line counter
-line_count <- 0
-
-# Function to process each element
-process_line <- function(line) {
-  # Handle page breaks differently
-  if (xml_name(line) == "pb") {
-    # Get folio number and format as standalone line
-    folio_num <- xml_attr(line, "n")
-    return(sprintf("<div class='folio-number'>%s</div>", folio_num))
-  }
-  
-  # Only increment line count for verse lines
-  if (xml_name(line) == "l") {
-    line_count <<- line_count + 1
-    
-    # SPECIAL CASE: Hard-code line v.1 to correct spacing
-    if (line_count == 1) {
-      return("<div style='line-height: 1.2;'>Seignurs pur lamur JhesuCrist</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.7 to correct apostrophe
-    if (line_count == 7) {
-      return("<div style='line-height: 1.2;'>bien crei volentiers lorrunt</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.118 to correct apostrophe
-    if (line_count == 118) {
-      return("<div style='line-height: 1.2;'>Des juvenceaus avoit lamur .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.163 to correct spacing
-    if (line_count == 163) {
-      return("<div style='line-height: 1.2;'>Ai ceu tens nert si belefemme</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.168 to correct spacing
-    if (line_count == 168) {
-      return("<div style='line-height: 1.2;'>Tresblanches erent amerveilles .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.249 to correct spacing
-    if (line_count == 249) {
-      return("<div style='line-height: 1.2;'>Sevus lur avez ke doner</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.288 to correct apostrophe
-    if (line_count == 288) {
-      return("<div style='line-height: 1.2;'>Se vous men voliez mener .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.309 to correct apostrophe
-    if (line_count == 309) {
-      return("<div style='line-height: 1.2;'>kunquez peust prendre respit</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.329 to correct apostrophe
-    if (line_count == 329) {
-      return("<div style='line-height: 1.2;'>mes de co nestot doter nulli</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.453 to correct spacing
-    if (line_count == 453) {
-      return("<div style='line-height: 1.2;'>uncore ai jo enma creance</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.474 to correct spacing
-    if (line_count == 474) {
-      return("<div style='line-height: 1.2;'>Ne nasqui femme ennul regnez .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.482 to correct spacing
-    if (line_count == 482) {
-      return("<div style='line-height: 1.2;'>ke meuz vaut keargent ou or .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.491 to correct spacing
-    if (line_count == 491) {
-      return("<div style='line-height: 1.2;'>Cume il fist le premerhomme</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.500 to correct apostrophe
-    if (line_count == 500) {
-      return("<div style='line-height: 1.2;'>Ja hom nentrast en paradis .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.539 to correct apostrophe
-    if (line_count == 539) {
-      return("<div style='line-height: 1.2;'>Al chievement del ureison</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.541 to fix repetition nesting issue
-    if (line_count == 541) {
-      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='1'>D</span>el ureison leva Marie</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.556 to correct apostrophe
-    if (line_count == 556) {
-      return("<div style='line-height: 1.2;'>Conseil li quert de sapience .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.582 to correct spacing
-    if (line_count == 582) {
-      return("<div style='line-height: 1.2;'>kant en ot beuz sestoi pluslee .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.620 to correct apostrophe
-    if (line_count == 620) {
-      return("<div style='line-height: 1.2;'>puis dormi treskal endemain .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.646 to correct apostrophe
-    if (line_count == 646) {
-      return("<div style='line-height: 1.2;'>come co feust chief duntison .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.707 to correct spacing
-    if (line_count == 707) {
-      return("<div style='line-height: 1.2;'>Ne puis entrestut le boscage</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.739 to correct apostrophe
-    if (line_count == 739) {
-      return("<div style='line-height: 1.2;'>Navoient soign dargent ne dor</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.748 to correct spacing
-    if (line_count == 748) {
-      return("<div style='line-height: 1.2;'>Le cors JhesuCrist lur donout .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.835 to correct apostrophe
-    if (line_count == 835) {
-      return("<div style='line-height: 1.2;'>ki domme estoit u de femme</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.903 to correct apostrophe
-    if (line_count == 903) {
-      return("<div style='line-height: 1.2;'>Nest hom les seust nen eust pesance</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.936 to correct apostrophe
-    if (line_count == 936) {
-      return("<div style='line-height: 1.2;'>Fet Deu sur lautel miracle .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.984 to correct spacing
-    if (line_count == 984) {
-      return("<div style='line-height: 1.2;'>Dresce ses mainsver ciel lestent .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.1005 to correct apostrophe
-    if (line_count == 1005) {
-      return("<div style='line-height: 1.2;'>Purquoi ten vas por une femme</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.1052 to correct apostrophe
-    if (line_count == 1052) {
-      return("<div style='line-height: 1.2;'>Respont Marie einz ten irras</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.1063 to correct apostrophe
-    if (line_count == 1063) {
-      return("<div style='line-height: 1.2;'>mes kant vient de laltre an cest tens</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.1126 to correct apostrophe
-    if (line_count == 1126) {
-      return("<div style='line-height: 1.2;'>Quankil out oi de Marie .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.1143 to correct apostrophe
-    if (line_count == 1143) {
-      return("<div style='line-height: 1.2;'>Crient de la rien quil plus coveite</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.1214 to correct apostrophe
-    if (line_count == 1214) {
-      return("<div style='line-height: 1.2;'>Ja hom navera saint parais .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.1295 to correct spacing
-    if (line_count == 1295) {
-      return("<div style='line-height: 1.2;'>ke meuz oleit eplusforment</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.1336 to correct spacing
-    if (line_count == 1336) {
-      return("<div style='line-height: 1.2;'>Tant la parvot Deus honorer .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.1338 to correct apostrophe
-    if (line_count == 1338) {
-      return("<div style='line-height: 1.2;'>kunc sa char rien ne blemist .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.1381 to correct spacing
-    if (line_count == 1381) {
-      return("<div style='line-height: 1.2;'>Beau Pere Rei de magestez</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.1465 to correct spacing
-    if (line_count == 1465) {
-      return("<div style='line-height: 1.2;'>Dekanque il sout obeir</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.1491 to correct apostrophe
-    if (line_count == 1491) {
-      return("<div style='line-height: 1.2;'>mes quant il vint a lenterrer</div>")
-    }
-    
-    # Add line number div every 5th line
-    line_number <- if (line_count %% 5 == 0) {
-      sprintf("<div class='line-number'>%d</div>", line_count)
-    } else {
-      
-      ""
-    }
-  } else {
-    line_number <- ""
-  }
-  
-  # Process emph elements (decorative initials)
-  emph_elements <- xml_find_all(line, ".//emph")
-  for (emph in emph_elements) {
-    # Get the initial letter text
-    initial_letter <- xml_text(emph)
-    
-    # Get the size attribute (n) and style attribute (rend)
-    size_attr <- xml_attr(emph, "n")
-    style_attr <- xml_attr(emph, "rend")
-    
-    # Create the HTML for the styled initial
-    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
-                             style_attr, size_attr, initial_letter)
-    
-    # Replace the emph element with the styled HTML
-    xml_text(emph) <- styled_initial
-  }
-  
-  # Find all <choice> elements within the line
-  choices <- xml_find_all(line, ".//choice")
-  for (choice in choices) {
-    # Check if the <choice> element contains <abbr> and <expan>
-    abbr_exists <- xml_find_first(choice, ".//abbr")
-    expan_exists <- xml_find_first(choice, ".//expan")
-    
-    if (!is.na(abbr_exists) && !is.na(expan_exists)) {
-      # If <abbr> and <expan> tags exist, extract only the <reg> text from <expan>
-      reg_text <- xml_text(xml_find_first(choice, ".//expan/reg"))
-      xml_set_text(choice, paste0(reg_text, " "))
-    } else {
-      # For non-abbreviation choices, keep original behavior
-      orig_text <- xml_text(xml_find_first(choice, ".//orig"))
-      xml_set_text(choice, paste0(orig_text, " "))
-    }
-  }
-  
-  # Now we want to remove any <reg> elements entirely
-  reg_elements <- xml_find_all(line, ".//reg")
-  xml_remove(reg_elements)
-  
-  # Replace <lb/> tags with HTML line break
-  lb_elements <- xml_find_all(line, ".//lb")
-  for (lb in lb_elements) {
-    xml_set_text(lb, "")
-  }
-  
-  # Return line with number if applicable - using xml_text() instead of as.character()
-  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                line_number, xml_text(line)))
-}
-
-# Process each line and wrap with <div class='column-break'> at each <cb/>
-for (line in lines) {
-  if (xml_name(line) == "cb") {
-    # Add a closing </div> for the previous column and an opening <div> for the new column
-    processed_lines <- c(processed_lines, "</div>", "<div class='column-break'>")
-  } else {
-    # Process the line and add it to the current column
-    processed_lines <- c(processed_lines, process_line(line))
-  }
-}
-
-# Process lines and wrap in edition-text div
-formatted_text <- paste(c("<div class='edition-text'>", processed_lines, "</div>"), collapse = "\n")
-cat(formatted_text)
+# PRINT "INTERMEDIATE VERSION"
+convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "intermediate")
 
 ```
 
@@ -436,108 +49,8 @@ cat(formatted_text)
 ## Extensive
 
 ```{r results='asis'}
-# START OF "EXTENSIVE" CODE
-# Read the XML content
-xml_file <- read_xml("data/T-C.xml")
-
-# Extract the <l>, <cb>, and <pb> elements inside the <text> element
-lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
-
-# Initialize an empty list to store the processed lines
-processed_lines <- list()
-
-# Initialize line counter
-line_count <- 0
-
-# Function to process each element
-process_line <- function(line) {
-  # Handle page breaks differently
-  if (xml_name(line) == "pb") {
-    # Get folio number and format as standalone line
-    folio_num <- xml_attr(line, "n")
-    return(sprintf("<div class='folio-number'>%s</div>", folio_num))
-  }
-  
-  # Only increment line count for verse lines
-  if (xml_name(line) == "l") {
-    line_count <<- line_count + 1
-      
-    # SPECIAL CASE: Hard-code line v.541 to fix repetition nesting issue
-    if (line_count == 541) {
-      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='1'>D</span>e l'ureison leva Marie</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.1381 to correct spacing
-    if (line_count == 1381) {
-      return("<div style='line-height: 1.2;'>Beau Pere Rei de magestez</div>")
-    }
-    
-    # Add line number div every 5th line
-    line_number <- if (line_count %% 5 == 0) {
-      sprintf("<div class='line-number'>%d</div>", line_count)
-    } else {
-      ""
-    }
-  } else {
-    line_number <- ""
-  }
-  
-  # Process emph elements (decorative initials)
-  emph_elements <- xml_find_all(line, ".//emph")
-  for (emph in emph_elements) {
-    # Get the initial letter text
-    initial_letter <- xml_text(emph)
-    
-    # Get the size attribute (n) and style attribute (rend)
-    size_attr <- xml_attr(emph, "n")
-    style_attr <- xml_attr(emph, "rend")
-    
-    # Create the HTML for the styled initial
-    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
-                             style_attr, size_attr, initial_letter)
-    
-    # Replace the emph element with the styled HTML
-    xml_text(emph) <- styled_initial
-  }
-  
-  # Now we want to remove any <orig> elements entirely
-  orig_elements <- xml_find_all(line, ".//orig")
-  xml_remove(orig_elements)
-  
-  # Find all <choice> elements within the line
-  choices <- xml_find_all(line, ".//choice")
-  for (choice in choices) {
-    # Extract the text from the <reg> tag
-    reg_text <- xml_text(xml_find_first(choice, ".//reg"))
-    # Replace the <choice> element with the text from the <reg> tag
-    xml_set_text(choice, paste0(" ", reg_text, " "))
-  }
-  
-  # Replace <lb/> tags with HTML line break
-  lb_elements <- xml_find_all(line, ".//lb")
-  for (lb in lb_elements) {
-    xml_set_text(lb, "")
-  }
-  
-  # Return line with number if applicable - using xml_text() instead of as.character()
-  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                line_number, xml_text(line)))
-}
-
-# Process each line and wrap with <div class='column-break'> at each <cb/>
-for (line in lines) {
-  if (xml_name(line) == "cb") {
-    # Add a closing </div> for the previous column and an opening <div> for the new column
-    processed_lines <- c(processed_lines, "</div>", "<div class='column-break'>")
-  } else {
-    # Process the line and add it to the current column
-    processed_lines <- c(processed_lines, process_line(line))
-  }
-}
-
-# Process lines and wrap in edition-text div
-formatted_text <- paste(c("<div class='edition-text'>", processed_lines, "</div>"), collapse = "\n")
-cat(formatted_text)
+#PRINT "EXTENSIVE" VERSION
+convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "extensive")
 
 ```
 
