Functionalize the xml to html conversion (doesn't include the manual line changes)

--- a/appendix2-T-C.qmd
+++ b/appendix2-T-C.qmd
@@ -12,6 +12,11 @@ format:
 ::: {.column}
 ## Minimal
 
+```{r}
+source("convert-xml-to-html.R")
+```
+
+
 ```{r tc-setup}
 # Load the xml2 package
 library(xml2)
