--- a/appendix2-T-B.qmd
+++ b/appendix2-T-B.qmd
@@ -11,8 +11,9 @@ format:
 # Load the xml2 package
 library(xml2)
 ```
-::: {.column-page-outset}
-::: {layout="[[6,6,6]]"}
+
+
+::: {.column-page-outset layout="[[6,6,6]]"}
 
 ::: {.column}
 ## Minimal
@@ -51,8 +52,6 @@ convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "intermediate")
 convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "extensive")
 
 ```
-
-:::
 
 :::
 
